fix some alignments

--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,7 @@ h3,
 .group2text,
 .bolded,
 .card-list,
+.reserves1,
 .group4-text,
 .group5-text,
 .image-text,
@@ -60,11 +61,6 @@ h3,
     margin-bottom: 100px;
 }
 
-.reserves1 {
-    border-radius: initial;
-    align-items: end;
-}
-
 .header-size {
     font-size: 35px;
 }
@@ -86,6 +82,16 @@ h3,
     color: #FFFFFF;
 }
 
+.card {
+    border: none;
+    border-radius: initial;
+}
+
+.card-img, .card-img-top {
+    border-top-left-radius: 0px ;
+    border-top-right-radius: 0px ;
+}
+
 .bolded {
     font-weight: bold;
     font-size: 16px;
@@ -97,6 +103,24 @@ h3,
 
 .card-list {
     font-size: 16px;
+}
+
+ul li span {
+    display: block;
+    margin-left: -.5em;
+}
+
+.card-footer .btn-primary,
+.card-body .btn-primary {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.reserves1 {
+    border-radius: initial;
+    align-items: end;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 /* Group 4 styles */
@@ -171,7 +195,13 @@ h3 {
 .reserve-search {
     color: #E5FEFF;
     font-size: 16px;
+    padding: 0px 0px;
 }
+
+/* .no-padding {
+    padding: 0px 0px;
+} */
+
 
 .input1 {
     display: flex;
@@ -183,6 +213,8 @@ h3 {
     font-weight: bold;
     border-radius: initial;
 }
+
+
 
 .search-style {
     background-color: #EBEDFC;
